字體、logo 待調整

--- a/css/_script.scss
+++ b/css/_script.scss
@@ -103,5 +103,8 @@
 @include iphone8-plus{
     .logline{
         font-size: 16px;
+        .content{
+            height: 220px;
+        }
     }
 }
