--- a/css/all.css
+++ b/css/all.css
@@ -403,13 +403,6 @@ body a {
   }
 }
 
-@media (max-width: 520px) {
-  .backToTop {
-    width: 40px;
-    height: 40px;
-  }
-}
-
 .bg-footer {
   background-color: #0D5661;
 }
@@ -543,7 +536,7 @@ body a {
 
 @media (max-width: 991px) {
   .banner {
-    height: 500px;
+    height: 550px;
   }
 }
 
@@ -726,6 +719,9 @@ body a {
 @media (max-width: 414px) {
   .logline {
     font-size: 16px;
+  }
+  .logline .content {
+    height: 220px;
   }
 }
 /*# sourceMappingURL=all.css.map */
