--- a/css/_grid.scss
+++ b/css/_grid.scss
@@ -1,4 +1,4 @@
-@mixin pad {
+@mixin pad{
     @media (max-width:991px) {
         @content;
     }
@@ -13,8 +13,13 @@
         @content;
     }
 }
-@mixin mobile {
+@mixin mobile{
     @media (max-width:767px) {
+        @content;
+    }
+}
+@mixin w630{
+    @media (max-width:630px) {
         @content;
     }
 }
