--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -3,7 +3,7 @@
 }
 body{
     font-size: 20px;
-    font-family: 'Times New Roman', Times, serif;   //待修改
+    font-family: 'Times New Roman', Times, serif,'-apple-system-ui-serif', 'ui-serif';   //待修改
     background-color: $primary;
     img{
         display: block;
