--- a/css/_experience.scss
+++ b/css/_experience.scss
@@ -32,16 +32,11 @@
 @include w520{
     .experience{
         font-size: 18px;
-        .title h3,.content h3{
+        .title h3{
             font-size: 20px;
         }
-    }
-}
-@include iphone8-plus{
-    .experience{
-        font-size: 16px;
-        .title h3,.content h3{
-            font-size: 18px;
+        .content h3{
+            font-size: 20px;
         }
     }
 }
