--- a/css/_script.scss
+++ b/css/_script.scss
@@ -37,14 +37,6 @@
         }
     }
 }
-@include iphone8-plus{
-    .comments{
-        font-size: 16px;
-        .person h3{
-            font-size: 18px;
-        }
-    }
-}
 
 ////////////////////////////////////////
 .logline{
@@ -101,10 +93,7 @@
     }
 }
 @include iphone8-plus{
-    .logline{
-        font-size: 16px;
-        .content{
-            height: 220px;
-        }
+    .logline .content{
+        height: 220px;
     }
 }
