--- a/css/all.css
+++ b/css/all.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -347,7 +348,7 @@ table {
 
 body {
   font-size: 20px;
-  font-family: 'Times New Roman', Times, serif,'-apple-system-ui-serif', 'ui-serif';
+  font-family: 'Times New Roman', Times, serif,'Source Han Serif','宋體';
   background-color: #6699A1;
 }
 
@@ -459,12 +460,6 @@ body a {
 @media (max-width: 520px) {
   .footer {
     font-size: 18px;
-  }
-}
-
-@media (max-width: 414px) {
-  .footer {
-    font-size: 16px;
   }
 }
 
@@ -591,12 +586,6 @@ body a {
   }
 }
 
-@media (max-width: 414px) {
-  .selfIntro .content {
-    font-size: 16px;
-  }
-}
-
 .mandala {
   max-width: 992px;
   line-height: 1.5;
@@ -623,12 +612,6 @@ body a {
 @media (max-width: 520px) {
   .mandala {
     font-size: 18px;
-  }
-}
-
-@media (max-width: 414px) {
-  .mandala {
-    font-size: 16px;
   }
 }
 
@@ -678,15 +661,6 @@ body a {
   }
   .comments .person h3 {
     font-size: 20px;
-  }
-}
-
-@media (max-width: 414px) {
-  .comments {
-    font-size: 16px;
-  }
-  .comments .person h3 {
-    font-size: 18px;
   }
 }
 
@@ -754,9 +728,6 @@ body a {
 }
 
 @media (max-width: 414px) {
-  .logline {
-    font-size: 16px;
-  }
   .logline .content {
     height: 220px;
   }
@@ -881,12 +852,6 @@ body a {
   .portfolio .content {
     padding: 0px 30px;
   }
-  .portfolio h3 {
-    font-size: 18px;
-  }
-  .portfolio p {
-    font-size: 16px;
-  }
 }
 
 .experience {
@@ -933,17 +898,11 @@ body a {
   .experience {
     font-size: 18px;
   }
-  .experience .title h3, .experience .content h3 {
+  .experience .title h3 {
     font-size: 20px;
   }
-}
-
-@media (max-width: 414px) {
-  .experience {
-    font-size: 16px;
-  }
-  .experience .title h3, .experience .content h3 {
-    font-size: 18px;
+  .experience .content h3 {
+    font-size: 20px;
   }
 }
 /*# sourceMappingURL=all.css.map */
