--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -3,7 +3,7 @@
 }
 body{
     font-size: 20px;
-    font-family: 'Times New Roman', Times, serif,'Source Han Serif','宋體';
+    font-family: 'Times New Roman', Times, serif,'Noto Serif','Noto Serif TC';
     background-color: $primary;
     img{
         display: block;
