--- a/css/all.css
+++ b/css/all.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -348,7 +347,7 @@ table {
 
 body {
   font-size: 20px;
-  font-family: 'Times New Roman', Times, serif,'Source Han Serif','宋體';
+  font-family: 'Times New Roman', Times, serif,'Noto Serif','Noto Serif TC';
   background-color: #6699A1;
 }
 
