--- a/css/_index.scss
+++ b/css/_index.scss
@@ -126,3 +126,7 @@
         font-size: 18px;
     }
 }
+.banner{
+    background-image: url(https://s1.1zoom.me/b5050/194/Coast_Little_girls_Clouds_532086_1366x768.jpg);
+    background-position: center;
+}
