--- a/css/all.css
+++ b/css/all.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -620,6 +621,11 @@ body a {
   }
 }
 
+.banner {
+  background-image: url(https://s1.1zoom.me/b5050/194/Coast_Little_girls_Clouds_532086_1366x768.jpg);
+  background-position: center;
+}
+
 .comments {
   max-width: 992px;
   line-height: 1.5;
@@ -678,9 +684,29 @@ body a {
   width: 30%;
 }
 
-.logline li img {
-  height: 200px;
+.logline li .img-1 {
+  height: 170px;
   border-radius: 30px 30px 0 0;
+  background-image: url(../img/偷光.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.logline li .img-2 {
+  height: 170px;
+  border-radius: 30px 30px 0 0;
+  background-image: url(../img/shoot.jpg);
+  border-bottom: 1px solid black;
+  background-position: center;
+  background-size: cover;
+}
+
+.logline li .img-3 {
+  height: 170px;
+  border-radius: 30px 30px 0 0;
+  background-image: url(../img/回.jpg);
+  background-position: center;
+  background-size: cover;
 }
 
 .logline .content {
@@ -712,6 +738,9 @@ body a {
     width: 75%;
     margin: 0 auto 75px;
   }
+  .logline li .img-1, .logline li .img-2, .logline li .img-3 {
+    height: 300px;
+  }
   .logline .content {
     height: 220px;
   }
@@ -726,6 +755,9 @@ body a {
   }
   .logline li {
     width: 90%;
+  }
+  .logline li .img-1, .logline li .img-2, .logline li .img-3 {
+    height: 200px;
   }
   .logline .content {
     height: 200px;
